--- a/app/src/main/res/layout/bottom_sheet_music_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_music_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -10,49 +11,47 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:orientation="horizontal"
             android:gravity="center_vertical"
-            >
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/music_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:text="那就这样吧"
                 android:layout_marginLeft="10dp"
-                />
+                android:text="那就这样吧"
+                android:textColor="@color/black"
+                android:textSize="16sp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black_sub"
-                android:text="-"
-                android:textSize="14sp"
                 android:layout_marginLeft="2dp"
-                />
+                android:text="-"
+                android:textColor="@color/black_sub"
+                android:textSize="14sp"/>
+
             <TextView
                 android:id="@+id/music_singer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black_sub"
-                android:textSize="14sp"
                 android:text="Rocky"
-                />
+                android:textColor="@color/black_sub"
+                android:textSize="14sp"/>
         </LinearLayout>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_close"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            />
+            android:src="@mipmap/icon_close"/>
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
         android:layout_marginLeft="10dp"
-        />
+        android:background="@android:color/darker_gray"/>
 </LinearLayout>
