--- a/app/src/main/res/layout/bottom_sheet_share_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_share_dialog.xml
@@ -1,179 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
- <LinearLayout
-     android:layout_width="match_parent"
-     android:layout_height="50dp"
-     android:gravity="center_vertical"
-     android:layout_marginLeft="5dp"
-     android:orientation="horizontal"
-     >
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-     <ImageView
-         android:layout_width="30dp"
-         android:layout_height="30dp"
-         android:src="@drawable/share_sina"
-         />
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:textSize="15sp"
-         android:textColor="@color/black"
-         android:text="微博分享"
-         android:layout_marginLeft="10dp"
-         />
- </LinearLayout>
-   <View
-       android:layout_width="match_parent"
-       android:layout_height="1px"
-       android:background="@android:color/darker_gray"
-       android:alpha="0.7"
-       android:layout_marginLeft="45dp"
-       />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:orientation="horizontal"
-        >
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/share_evernote"
-            />
+            android:src="@drawable/share_sina"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:layout_marginLeft="10dp"
+            android:text="微博分享"
             android:textColor="@color/black"
+            android:textSize="15sp"/>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="45dp"
+        android:alpha="0.7"
+        android:background="@android:color/darker_gray"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/share_evernote"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="印象笔记分享"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
-        android:alpha="0.7"
         android:layout_marginLeft="45dp"
-        />
+        android:alpha="0.7"
+        android:background="@android:color/darker_gray"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:orientation="horizontal"
-        >
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/share_youdao"
-            />
+            android:src="@drawable/share_youdao"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
             android:text="有道分享"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
-        android:alpha="0.7"
         android:layout_marginLeft="45dp"
-        />
+        android:alpha="0.7"
+        android:background="@android:color/darker_gray"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:orientation="horizontal"
-        >
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/share_wechat"
-            />
+            android:src="@drawable/share_wechat"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
             android:text="微信分享"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
-        android:alpha="0.7"
         android:layout_marginLeft="45dp"
-        />
+        android:alpha="0.7"
+        android:background="@android:color/darker_gray"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:orientation="horizontal"
-        >
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/share_friends"
-            />
+            android:src="@drawable/share_friends"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
             android:text="朋友圈分享"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
         android:layout_marginLeft="45dp"
-        />
+        android:background="@android:color/darker_gray"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:orientation="horizontal"
-        >
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/share_more"
-            />
+            android:src="@drawable/share_more"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:text="其他"
             android:layout_marginLeft="10dp"
-            />
+            android:text="其他"
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
-        android:alpha="0.7"
         android:layout_marginLeft="45dp"
-        />
+        android:alpha="0.7"
+        android:background="@android:color/darker_gray"/>
 </LinearLayout>
