--- a/app/src/main/res/layout/custom_behavior_activity.xml
+++ b/app/src/main/res/layout/custom_behavior_activity.xml
@@ -2,38 +2,36 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/header_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/header_height"
         android:scaleType="centerCrop"
-        android:src="@drawable/md"
-        />
-   <LinearLayout
+        android:src="@drawable/md"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/collapsedTitleHeight"
         android:gravity="center_vertical"
-        app:layout_behavior="@string/floating_title_behavoir"
-        >
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:textColor="@color/black"
-             android:text="输入关键字"
-             android:gravity="center_vertical"
-             android:layout_marginLeft="20dp"
-             />
+        app:layout_behavior="@string/floating_title_behavoir">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="输入关键字"
+            android:textColor="@color/black"/>
     </LinearLayout>
 
-   <android.support.v7.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/content_behavior"
-        />
+        app:layout_behavior="@string/content_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
